Closed
Bug 408109
Opened 18 years ago
Closed 18 years ago
nsProfileCollector::LogBookmarkLocation does not count bookmarks
Categories
(Toolkit Graveyard :: Data Collection/Metrics, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: alex, Assigned: pete)
References
()
Details
Attachments
(1 file)
|
851 bytes,
patch
|
Details | Diff | Splinter Review |
LogBookmarkLocation is supposed to count the number of bookmarks by type. It is called by the profile collector, and the expected output is something like this:
<bookmarks>
<bookmarklocation foldercount="4" itemcount="6" separatorcount="2"
livemarkcount="1" name="full-tree"/>
<bookmarklocation foldercount="2" itemcount="1" separatorcount="2"
livemarkcount="0" name="root"/>
<bookmarklocation foldercount="0" itemcount="1" separatorcount="0"
livemarkcount="1" name="toolbar"/>
</bookmarks>
That data comes from bug 399869, so it was working at some point.
However, it is currently reporting a 0 itemcount for all profiles that are sending data. For example:
<bookmarks>
<bookmarklocation foldercount="0" itemcount="0" separatorcount="0" livemarkcount="0" name="full-tree"/>
<bookmarklocation foldercount="0" itemcount="0" separatorcount="0" livemarkcount="0" name="root"/>
<bookmarklocation foldercount="0" itemcount="0" separatorcount="0" livemarkcount="0" name="toolbar"/>
</bookmarks>
I do not think this is related to bug 356606... but it is possible I missed the connection in the collector.
| Assignee | ||
Updated•18 years ago
|
Status: NEW → ASSIGNED
| Assignee | ||
Comment 1•18 years ago
|
||
Ok, I have a patch for this.
Here is my bookmarks data w/ the patch
<bookmarks>
<bookmarklocation foldercount="6" itemcount="6" separatorcount="2" livemarkcount="1" name="full-tree"/>
<bookmarklocation foldercount="1" itemcount="1" separatorcount="1" livemarkcount="0" name="root"/>
<bookmarklocation foldercount="1" itemcount="1" separatorcount="0" livemarkcount="1" name="toolbar"/>
</bookmarks>
| Assignee | ||
Comment 2•18 years ago
|
||
Jan can you review this one please ...
Comment 3•18 years ago
|
||
See these comments:
http://bonsai.mozilla.org/cvsview2.cgi?diff_mode=context&whitespace_mode=show&root=/cvsroot&subdir=mozilla/browser/components/places/content&command=DIFF_FRAMESET&file=tree.xml&rev2=1.50&rev1=1.49
I wonder why it worked before. If the output you get is correct then r=varga
| Assignee | ||
Comment 4•18 years ago
|
||
> If the output you get is correct then r=varga
Yea, in fact as I added an additional bm to my toolbar, I can see the itemcount increment to reflect the change ...
| Assignee | ||
Comment 5•18 years ago
|
||
patch checked in
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•