b=408109 r=Jan.Varga nsProfileCollector::LogBookmarkLocation does not count bookmarks --pete